--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div style="float:left;"></div>
 		<hr>
 		<h2>Publications</h2>
+		<p style="font-size:small; color:gray;"><i>All authors are listed in lexicographic order.</i></p>
 		<div class="conference_papers">
 			<h3>Conference Papers</h3>
 			<ul>
@@ -27,6 +28,13 @@
 					<div class="authors">Xiao Mao</div>
 					<div class="conference"> <i>IEEE Symposium on Foundations of Computer Science</i> (FOCS 2021). <b style="color:#ed2939;">Machtey Award for Best Student Paper.</b> <b style="color:#ed2939;">Invited to the SICOMP Special Issue for FOCS 2021</b> </div>
 					<div class="link">  <a href="https://epubs.siam.org/doi/10.1137/22M1480719">[SIAM Journal Version]</a> <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9719831">[IEEE]</a> <a href="https://arxiv.org/abs/2106.02026">[arXiv]</a> </div>
+				</li>
+				<br>
+				<li>
+					<div class="title">Breaking the Sorting Barrier for Directed Single-Source Shortest
+Paths</div>
+					<div class="authors">Ran Duan, Jiayi Mao, Xiao Mao, Xinkai Shu, Longhui Yin</div>
+					<div class="conference"> <i>ACM Symposium on Theory of Computing</i> (STOC 2025) </div>				
 				</li>
 				<br>
 				<li>
