--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div class="title">Breaking the Sorting Barrier for Directed Single-Source Shortest
 Paths</div>
 					<div class="authors">Ran Duan, Jiayi Mao, Xiao Mao, Xinkai Shu, Longhui Yin</div>
-					<div class="conference"> <i>ACM Symposium on Theory of Computing</i> (STOC 2025)  <b style="color:#ed2939;">Best Paper Award.</b>  </div>				
+					<div class="conference"> <i>ACM Symposium on Theory of Computing</i> (STOC 2025). <b style="color:#ed2939;">Best Paper Award.</b>  </div>				
 				</li>
 				<br>
 				<li>
