--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div style="float:left;"></div>
 		<hr>
-		<h2>Publications</h2>
+		<h2>Selected Publications</h2>
 		<p style="font-size:small; color:gray;"><i>All authors are listed in lexicographic order.</i></p>
 		<div class="conference_papers">
 			<h3>Conference Papers</h3>
