--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Paths</div>
 		<hr>
 		<div class="misc">
 			<h2>Miscellaneous</h2>
-			<p>Competitive programming: </span><a href="https://cphof.org/profile/topcoder:matthew99a"><span>Competitive Programming Hall Of Fame</span></a><span></p>
+			<p>Competitive programming: </span><a href="https://cphof.org/profile/topcoder:matthew99a"><span>Competitive Programming Hall Of Fame</span></a></p>
 			<p>My commonly used ID <i>matthew99</i> consists of two parts: Matthew as my English name, and 99 as in my birth year 1999. Whenever the ID has been previously taken, an extra 'a' is attached to the end forming <i>matthew99a</i>. </span> </p>
 			<p>In Chinese, my name is written as 毛啸 (Máo Xiào). My mother gave me the English name "Matthew" due to its phonetic similarity to "Mao Xiao" (roughly pronounced "Mao Shiao" in Mandarin, and in <a href="https://zh.wikipedia.org/zh/%E5%AE%81%E4%B9%A1%E8%AF%9D">Ningxiangnese</a> spoken in my mother's hometown it's roughly pronounced "Maw Siaw" rhyming with "paw"). </p>
 		</div>
