--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Paths</div>
 					<div class="authors">Xiao Mao</div>
 					<div class="conference"> <i>IEEE Symposium on Foundations of Computer Science</i> (FOCS 2021). <b style="color:#ed2939;">Machtey Award for Best Student Paper, sole winner.</b> <b style="color:#ed2939;">Invited to the SICOMP Special Issue for FOCS 2021</b> </div>
 					<div class="link">  <a href="https://epubs.siam.org/doi/10.1137/22M1480719">[SIAM Journal Version]</a> <a href="https://arxiv.org/abs/2106.02026">[arXiv]</a> </div>
+					<div class="note">My first peer-reviewed publication</div>
 				</li>
 				<br>
 			</ul>
